# CBattle-bd-

./: .gitignore  README.md  __init__.py  b  battle_core.py  c  f  models.py  pyproject.toml  u  views.py
CoreBattle/: main.c  main.h
cbattle/: apps.py
cbattle/extension/: __init__.py  cog.py
